--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="ask_button">Ask</string>
+    <string name="app_label">“Make everyday decisions easier!</string>
+    <string name="img_answer">Image Answer</string>
 </resources>
